# multi-agent-toolbench-synthgen

./: .gitignore  DESIGN.md  README.md  RUN_E2E.md  pyproject.toml  requirements.txt
sample_tools/: maps.json  weather.json
tests/: __init__.py  conftest.py  test_e2e.py  test_memory.py  test_registry.py
toolbench_synthgen/: __init__.py  cli.py  models.py
toolbench_synthgen/agents/: __init__.py  assistant.py  generator.py  planner.py  sampler.py  user_proxy.py  validator.py
toolbench_synthgen/executor/: __init__.py  offline.py
toolbench_synthgen/graph/: __init__.py  tool_graph.py
toolbench_synthgen/memory/: __init__.py  store.py
toolbench_synthgen/pipeline/: __init__.py  generate.py  metrics.py  validate.py
toolbench_synthgen/registry/: __init__.py  loader.py  models.py  registry.py
